--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -2,8 +2,13 @@ spring:
   jpa:
     properties:
       hibernate.jdbc.time_zone: UTC
-    show-sql: true
+    show-sql: false
   datasource:
     url: jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
     username: sa
     password: sa
+
+logging:
+  level:
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
