--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 projectName=spring-fp-result-kt
 projectGroup=io.github.craigmiller160
-projectVersion=2.0.0-SNAPSHOT
+projectVersion=2.0.0
 
 kotlinVersion=1.8.10
 testcontainersVersion=1.17.2
